# Acta_Astronautica_April2019

./: .gitbook.yaml  .gitignore  README.md  SUMMARY.md  add3  chapter-2.md
IAC_2018/: RUN_IAC_2018_constr_so.m  RUN_IAC_2018_mo.m  RUN_IAC_decomposition10000_mass.m  RUN_IAC_decomposition1000_RES.m  RUN_IAC_decomposition1000_mass.m  RUN_IAC_decomposition1000_mass_d_deterministico.m  RUN_IAC_decomposition1000_mass_minmax_archive_1.m  RUN_IAC_decomposition1000_mass_minmax_archive_2.m  RUN_IAC_decomposition1000_mass_minmax_archive_3.m  RUN_IAC_decomposition1000_mass_nominal_u.m  RUN_IAC_decomposition15000_mass.m  RUN_IAC_decomposition5000_mass.m  RUN_IAC_min_d_nominal_u.m  RUN_constr_max_MASSu_d_unconstrained.m  RUN_max_CONSTRu_d_unconstrained.m  RUN_max_CONSTRu_mind_nominal_u.m  RUN_max_MASSu_d_unconstrained.m  RUN_max_MASSu_mind_nominal_u.m  mask_min_d_iac.m  mask_minimise_d_fixed_u.m  min_d_nominal_u.m  optimise_mo_ausa_IAC.m  prova_integrale.m  rn_decomposiion_4samples.m
IAC_2018/DOCUMENTS/: list_parameters.xlsx
IAC_2018/MATLAB_orbit/SphericalShaping/C++code/SphericalShapingGTOC2/ShapingFunctions/: CMakeLists.txt  ast_ephem.txt  loaddata.h  sphericalshaping.cpp  timefunc.h
IAC_2018/MO_belief/: CUBESAT_5subsystems_MASS_RES.m  belief_3d.m  plot_belief_3d.m
IAC_2018/NEW_RUN_belief/: Belief_1sample.m  Belief_1sample_DataVolume.m  Belief_1sample_d_archive.m  Belief_2sample.m  Belief_2sample_DataVolume.m  Belief_2sample_d_archive.m  Belief_3sample.m  Belief_3sample_d_archive.m  mask_belief_datavolume.m
IAC_2018/NEW_RUN_deterministic/: RUN_constr_max_fu_deterministic_d.m  RUN_deterministic_optimal.m  RUN_max_cu_deterministic_d.m  RUN_unconstr_max_fu_deterministic_d.m  init_IAC_tc_deterministic_new.m  mask_Acta_constr2unconstr.m  mask_Acta_constr2unconstr_DataVolume.m
IAC_2018/NEW_RUN_minmax/: RUN_minmax_Acta_2019_newversion_so_nu1200.m  RUN_minmax_Acta_2019_newversion_so_nu380.m  RUN_minmax_Acta_2019_newversion_so_nu390.m  RUN_minmax_Acta_2019_newversion_so_nu400.m  RUN_minmax_Acta_2019_newversion_so_nu410.m  RUN_minmax_Acta_2019_newversion_so_nu420.m  RUN_minmax_Acta_2019_newversion_so_nu500_2000000_10000.m  RUN_minmax_Acta_2019_newversion_so_nu500_3000000_15000.m  RUN_minmax_Acta_2019_newversion_so_nu800.m
IAC_2018/Old_run/: old_RUN_IAC_2018_so.m
IAC_2018/Optimisation_IAC2018/: optimise_minmax_so.m  optimise_minmax_so_decomposition.m  optimise_mpaidea.m
IAC_2018/Post_Processing/: PLOT_MO_SO.m  PLOT_archive_minmax_constr_so.m  PLOT_archive_minmax_max_constr.m  PLOT_archive_minmax_unconstr_so.m  PLOT_belief_nominal_margin.m  PLOT_constr_so_archive_and_exact_maxima_20000inner.m  PLOT_tune_MPAIDEA_convergence_inner_outer.m  plot_archive_g_convergence.m
Stuff_DANDA/: README.md
Stuff_GIANLUCA/: isPositiveIntegerValuedNumeric.m  matrix_labeled.m
docs/: README.md  SUMMARY.md  chapter-1.md  chapter-2-1.md  chapter-2.md  thermal.md  untitled.md
iac_2018/: README.md
stuff_danda/: README.md
stuff_danda-1/: README.md
stuff_gianluca/: README.md
stuff_gianluca-1/: bilevel_sinha.md  matlab_table_2_latex.md
z_other/: Untitled10.m
(+1381 files in other folders)
